; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/modules/vmid/extr_vmid.c_add_ptb_to_table.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/modules/vmid/extr_vmid.c_add_ptb_to_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.core_vmid = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.core_vmid*, i32, i32)* @add_ptb_to_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_ptb_to_table(%struct.core_vmid* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.core_vmid*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.core_vmid* %0, %struct.core_vmid** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.core_vmid*, %struct.core_vmid** %4, align 8
  %9 = getelementptr inbounds %struct.core_vmid, %struct.core_vmid* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  store i32 %7, i32* %13, align 4
  %14 = load %struct.core_vmid*, %struct.core_vmid** %4, align 8
  %15 = getelementptr inbounds %struct.core_vmid, %struct.core_vmid* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = add nsw i32 %16, -1
  store i32 %17, i32* %15, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
